out/production/TPCompiladores/Sintactico/y.output
   0  $accept : programa $end

   1  programa : IDENTIFICADOR bloque_declarativo bloque_ejecutable
   2           | IDENTIFICADOR bloque_ejecutable
   3           | error_programa

   4  error_programa : bloque_declarativo bloque_ejecutable
   5                 | IDENTIFICADOR bloque_ejecutable bloque_declarativo

   6  bloque_declarativo : declaracion
   7                     | bloque_declarativo declaracion

   8  bloque_ejecutable : BEGIN bloque_sentencias END
   9                    | error_bloque_ejecutable

  10  bloque_sentencias : sentencia_ejecucion
  11                    | bloque_sentencias sentencia_ejecucion

  12  error_bloque_ejecutable : bloque_sentencias END
  13                          | BEGIN bloque_sentencias error

  14  sentencia_ejecutable : control ';'
  15                       | seleccion ';'
  16                       | impresion ';'
  17                       | invocacion ';'
  18                       | asignacion ';'
  19                       | error_ejecucion

  20  error_ejecucion : control error
  21                  | seleccion error
  22                  | impresion error
  23                  | asignacion error
  24                  | invocacion error

  25  sentencia_ejecucion : sentencia_ejecutable
  26                      | try_catch ';'
  27                      | error_sentencia_ejecucion

  28  error_sentencia_ejecucion : try_catch error

  29  declaracion : tipo lista_de_variables ';'
  30              | tipo funcion ';'
  31              | TYPEDEF IDENTIFICADOR '=' tipo funcion_type ';'
  32              | error_declaracion

  33  error_declaracion : tipo lista_de_variables error
  34                    | tipo funcion error
  35                    | funcion ';'

  36  tipo : ULONG
  37       | DOUBLE

  38  control : REPEAT '(' asignacion_repeat ';' condicion ';' CTE_ULONG ')' bloque_repeat
  39          | REPEAT '(' asignacion_repeat ';' condicion ';' '-' CTE_ULONG ')' bloque_repeat
  40          | error_control

  41  error_control : REPEAT asignacion_repeat ';' condicion ';' CTE_ULONG ')' bloque_repeat
  42                | REPEAT '(' ';' condicion ';' CTE_ULONG ')' bloque_repeat
  43                | REPEAT '(' asignacion_repeat condicion ';' CTE_ULONG ')' bloque_repeat
  44                | REPEAT '(' asignacion_repeat ';' ';' CTE_ULONG ')' bloque_repeat
  45                | REPEAT '(' asignacion_repeat ';' condicion CTE_ULONG ')' bloque_repeat
  46                | REPEAT '(' asignacion_repeat ';' condicion ';' ')' bloque_repeat
  47                | REPEAT '(' asignacion_repeat ';' condicion ';' CTE_ULONG bloque_repeat
  48                | REPEAT '(' asignacion_repeat ';' condicion ';' CTE_ULONG ')' error

  49  asignacion_repeat : IDENTIFICADOR ASIGNACION CTE_ULONG
  50                    | error_asignacion_repeat

  51  error_asignacion_repeat : ASIGNACION CTE_ULONG
  52                          | IDENTIFICADOR CTE_ULONG
  53                          | IDENTIFICADOR ASIGNACION error

  54  bloque_repeat : BEGIN bloque_control END

  55  bloque_control : sentencia_control
  56                 | bloque_control sentencia_control

  57  sentencia_control : sentencia_ejecucion
  58                    | BREAK ';'
  59                    | error_sentencia_control

  60  error_sentencia_control : BREAK error

  61  asignacion : IDENTIFICADOR ASIGNACION expresion2
  62             | error_asignacion

  63  error_asignacion : ASIGNACION termino
  64                   | IDENTIFICADOR termino
  65                   | IDENTIFICADOR ASIGNACION error

  66  seleccion : IF '(' condicion ')' THEN bloque_if ENDIF
  67            | IF '(' condicion ')' THEN bloque_if ELSE bloque_if ENDIF
  68            | error_seleccion

  69  bloque_if : sentencia_ejecucion
  70            | BEGIN sentencia_ejecucion bloque_sentencias END ';'
  71            | error_bloque_if

  72  error_bloque_if : BEGIN sentencia_ejecucion END ';'
  73                  | BEGIN sentencia_ejecucion bloque_sentencias END error
  74                  | BEGIN sentencia_ejecucion END error

  75  error_seleccion : '(' condicion ')' THEN bloque_if ENDIF
  76                  | IF condicion ')' THEN bloque_if ENDIF
  77                  | IF '(' ')' THEN bloque_if ENDIF
  78                  | IF '(' condicion THEN bloque_if ENDIF
  79                  | IF '(' condicion ')' bloque_if ENDIF
  80                  | IF '(' condicion ')' THEN ENDIF
  81                  | IF '(' condicion ')' THEN bloque_if
  82                  | IF '(' condicion ')' THEN bloque_if ELSE ENDIF
  83                  | IF '(' condicion ')' THEN bloque_if ELSE bloque_if

  84  impresion : PRINT '(' CADENA ')'
  85            | PRINT '(' ')'

  86  invocacion : IDENTIFICADOR '(' CTE_ULONG ')'
  87             | IDENTIFICADOR '(' CTE_DOUBLE ')'
  88             | IDENTIFICADOR '(' IDENTIFICADOR ')'
  89             | error_invocacion

  90  error_invocacion : IDENTIFICADOR '(' ')'
  91                   | IDENTIFICADOR '(' CTE_ULONG error
  92                   | IDENTIFICADOR '(' CTE_DOUBLE error
  93                   | IDENTIFICADOR '(' IDENTIFICADOR error

  94  try_catch : TRY sentencia_ejecutable CATCH bloque_catch
  95            | error_try_catch

  96  error_try_catch : TRY CATCH bloque_catch
  97                  | TRY sentencia_ejecutable bloque_catch
  98                  | TRY sentencia_ejecutable CATCH error
  99                  | TRY try_catch CATCH bloque_catch

 100  bloque_catch : BEGIN bloque_1 END

 101  bloque_1 : sentencia_ejecutable
 102           | bloque_1 sentencia_ejecutable

 103  lista_de_variables : lista_de_variables ',' IDENTIFICADOR
 104                     | IDENTIFICADOR
 105                     | error_lista_de_variables

 106  error_lista_de_variables : lista_de_variables IDENTIFICADOR

 107  funcion : declaracion_funcion bloque_funcion
 108          | error_funcion

 109  error_funcion : declaracion_funcion error

 110  declaracion_funcion : FUNC IDENTIFICADOR '(' parametro ')'
 111                      | error_declaracion_funcion

 112  error_declaracion_funcion : IDENTIFICADOR '(' parametro ')'
 113                            | FUNC '(' parametro ')'
 114                            | FUNC IDENTIFICADOR parametro ')'
 115                            | FUNC IDENTIFICADOR '(' ')'
 116                            | FUNC IDENTIFICADOR '(' parametro error

 117  parametro : tipo IDENTIFICADOR
 118            | error_parametro

 119  error_parametro : tipo error

 120  funcion_type : FUNC '(' tipo ')' ';' bloque_type
 121               | error_funcion_type

 122  error_funcion_type : '(' tipo ')' ';' bloque_type
 123                     | FUNC tipo ')' ';' bloque_type
 124                     | FUNC '(' ')' ';' bloque_type
 125                     | FUNC '(' tipo ';' bloque_type
 126                     | FUNC '(' tipo ')' bloque_type
 127                     | FUNC '(' tipo ')' ';' error

 128  bloque_type : IDENTIFICADOR lista_de_variables

 129  bloque_funcion : bloque_declarativo bloque_ejecucion_funcion
 130                 | bloque_ejecucion_funcion
 131                 | error_bloque_funcion

 132  error_bloque_funcion : bloque_declarativo error

 133  bloque_ejecucion_funcion : BEGIN bloque_sentencias RETURN '(' condicion ')' ';' END
 134                           | BEGIN PRE ':' '(' condicion ')' ';' bloque_sentencias RETURN '(' condicion ')' ';' END
 135                           | BEGIN PRE ':' '(' condicion ')' ';' RETURN '(' condicion ')' ';' END
 136                           | error_bloque_ejecucion_funcion

 137  error_bloque_ejecucion_funcion : bloque_sentencias RETURN '(' condicion ')' ';' END
 138                                 | BEGIN RETURN '(' condicion ')' ';' END
 139                                 | BEGIN bloque_sentencias '(' condicion ')' ';' END
 140                                 | BEGIN bloque_sentencias RETURN condicion ')' ';' END
 141                                 | BEGIN bloque_sentencias RETURN '(' ')' ';' END
 142                                 | BEGIN bloque_sentencias RETURN '(' condicion ';' END
 143                                 | BEGIN bloque_sentencias RETURN '(' condicion ')' END
 144                                 | BEGIN bloque_sentencias END
 145                                 | BEGIN bloque_sentencias RETURN '(' condicion ')' ';' error
 146                                 | PRE '(' condicion ')' ';' bloque_sentencias RETURN '(' condicion ')' ';' END
 147                                 | BEGIN PRE condicion ')' ';' bloque_sentencias RETURN '(' condicion ')' ';' END
 148                                 | BEGIN PRE '(' ')' ';' bloque_sentencias RETURN '(' condicion ')' ';' END
 149                                 | BEGIN PRE '(' condicion ';' bloque_sentencias RETURN '(' condicion ')' ';' END
 150                                 | BEGIN PRE '(' condicion ')' bloque_sentencias RETURN '(' condicion ')' ';' END
 151                                 | BEGIN PRE '(' condicion ')' ';' RETURN '(' condicion ')' ';' END
 152                                 | BEGIN PRE '(' condicion ')' ';' bloque_sentencias '(' condicion ')' ';' END
 153                                 | BEGIN PRE '(' condicion ')' ';' bloque_sentencias RETURN condicion ')' ';' END
 154                                 | BEGIN PRE '(' condicion ')' ';' bloque_sentencias RETURN '(' ')' ';' END
 155                                 | BEGIN PRE '(' condicion ')' ';' bloque_sentencias RETURN '(' condicion ';' END
 156                                 | BEGIN PRE '(' condicion ')' ';' bloque_sentencias RETURN '(' condicion ')' END
 157                                 | BEGIN PRE '(' condicion ')' ';' bloque_sentencias RETURN '(' condicion ')' ';' error
 158                                 | BEGIN PRE '(' condicion ')' ';' bloque_sentencias END

 159  condicion : expresion
 160            | condicion OR expresion

 161  expresion : expresion1
 162            | expresion AND expresion1

 163  expresion1 : expresion2
 164             | expresion1 comparador expresion2

 165  expresion2 : termino
 166             | expresion2 '+' termino
 167             | expresion2 '-' termino

 168  termino : termino '*' factor
 169          | termino '/' factor
 170          | factor

 171  factor : '-' factor
 172         | CTE_DOUBLE
 173         | CTE_ULONG
 174         | IDENTIFICADOR
 175         | invocacion

 176  comparador : '<'
 177             | '>'
 178             | IGUAL_IGUAL
 179             | MAYOR_IGUAL
 180             | MENOR_IGUAL
 181             | DISTINTO

state 0
	$accept : . programa $end  (0)

	IDENTIFICADOR  shift 1
	FUNC  shift 2
	ULONG  shift 3
	DOUBLE  shift 4
	TYPEDEF  shift 5
	.  error

	programa  goto 6
	bloque_declarativo  goto 7
	error_programa  goto 8
	declaracion  goto 9
	tipo  goto 10
	funcion  goto 11
	error_declaracion  goto 12
	declaracion_funcion  goto 13
	error_funcion  goto 14
	error_declaracion_funcion  goto 15


state 1
	programa : IDENTIFICADOR . bloque_declarativo bloque_ejecutable  (1)
	programa : IDENTIFICADOR . bloque_ejecutable  (2)
	error_programa : IDENTIFICADOR . bloque_ejecutable bloque_declarativo  (5)
	error_declaracion_funcion : IDENTIFICADOR . '(' parametro ')'  (112)

	IDENTIFICADOR  shift 16
	ASIGNACION  shift 17
	IF  shift 18
	PRINT  shift 19
	FUNC  shift 2
	BEGIN  shift 20
	ULONG  shift 3
	DOUBLE  shift 4
	REPEAT  shift 21
	TRY  shift 22
	TYPEDEF  shift 5
	'('  shift 23
	.  error

	bloque_declarativo  goto 24
	bloque_ejecutable  goto 25
	declaracion  goto 9
	bloque_sentencias  goto 26
	error_bloque_ejecutable  goto 27
	sentencia_ejecucion  goto 28
	sentencia_ejecutable  goto 29
	control  goto 30
	seleccion  goto 31
	impresion  goto 32
	invocacion  goto 33
	asignacion  goto 34
	error_ejecucion  goto 35
	try_catch  goto 36
	error_sentencia_ejecucion  goto 37
	tipo  goto 10
	funcion  goto 11
	error_declaracion  goto 12
	error_control  goto 38
	error_asignacion  goto 39
	error_seleccion  goto 40
	error_invocacion  goto 41
	error_try_catch  goto 42
	declaracion_funcion  goto 13
	error_funcion  goto 14
	error_declaracion_funcion  goto 15


state 2
	declaracion_funcion : FUNC . IDENTIFICADOR '(' parametro ')'  (110)
	error_declaracion_funcion : FUNC . '(' parametro ')'  (113)
	error_declaracion_funcion : FUNC . IDENTIFICADOR parametro ')'  (114)
	error_declaracion_funcion : FUNC . IDENTIFICADOR '(' ')'  (115)
	error_declaracion_funcion : FUNC . IDENTIFICADOR '(' parametro error  (116)

	IDENTIFICADOR  shift 43
	'('  shift 44
	.  error


state 3
	tipo : ULONG .  (36)

	.  reduce 36


state 4
	tipo : DOUBLE .  (37)

	.  reduce 37


state 5
	declaracion : TYPEDEF . IDENTIFICADOR '=' tipo funcion_type ';'  (31)

	IDENTIFICADOR  shift 45
	.  error


state 6
	$accept : programa . $end  (0)

	$end  accept


state 7
	error_programa : bloque_declarativo . bloque_ejecutable  (4)
	bloque_declarativo : bloque_declarativo . declaracion  (7)

	IDENTIFICADOR  shift 16
	ASIGNACION  shift 17
	IF  shift 18
	PRINT  shift 19
	FUNC  shift 2
	BEGIN  shift 20
	ULONG  shift 3
	DOUBLE  shift 4
	REPEAT  shift 21
	TRY  shift 22
	TYPEDEF  shift 5
	'('  shift 46
	.  error

	bloque_ejecutable  goto 47
	declaracion  goto 48
	bloque_sentencias  goto 26
	error_bloque_ejecutable  goto 27
	sentencia_ejecucion  goto 28
	sentencia_ejecutable  goto 29
	control  goto 30
	seleccion  goto 31
	impresion  goto 32
	invocacion  goto 33
	asignacion  goto 34
	error_ejecucion  goto 35
	try_catch  goto 36
	error_sentencia_ejecucion  goto 37
	tipo  goto 10
	funcion  goto 11
	error_declaracion  goto 12
	error_control  goto 38
	error_asignacion  goto 39
	error_seleccion  goto 40
	error_invocacion  goto 41
	error_try_catch  goto 42
	declaracion_funcion  goto 13
	error_funcion  goto 14
	error_declaracion_funcion  goto 15


state 8
	programa : error_programa .  (3)

	.  reduce 3


state 9
	bloque_declarativo : declaracion .  (6)

	.  reduce 6


state 10
	declaracion : tipo . lista_de_variables ';'  (29)
	declaracion : tipo . funcion ';'  (30)
	error_declaracion : tipo . lista_de_variables error  (33)
	error_declaracion : tipo . funcion error  (34)

	IDENTIFICADOR  shift 49
	FUNC  shift 2
	.  error

	lista_de_variables  goto 50
	funcion  goto 51
	error_lista_de_variables  goto 52
	declaracion_funcion  goto 13
	error_funcion  goto 14
	error_declaracion_funcion  goto 15


state 11
	error_declaracion : funcion . ';'  (35)

	';'  shift 53
	.  error


state 12
	declaracion : error_declaracion .  (32)

	.  reduce 32


state 13
	funcion : declaracion_funcion . bloque_funcion  (107)
	error_funcion : declaracion_funcion . error  (109)

	error  shift 54
	IDENTIFICADOR  shift 16
	ASIGNACION  shift 17
	IF  shift 18
	PRINT  shift 19
	FUNC  shift 2
	BEGIN  shift 55
	ULONG  shift 3
	DOUBLE  shift 4
	REPEAT  shift 21
	PRE  shift 56
	TRY  shift 22
	TYPEDEF  shift 5
	'('  shift 46
	.  error

	bloque_declarativo  goto 57
	declaracion  goto 9
	bloque_sentencias  goto 58
	sentencia_ejecucion  goto 28
	sentencia_ejecutable  goto 29
	control  goto 30
	seleccion  goto 31
	impresion  goto 32
	invocacion  goto 33
	asignacion  goto 34
	error_ejecucion  goto 35
	try_catch  goto 36
	error_sentencia_ejecucion  goto 37
	tipo  goto 10
	funcion  goto 11
	error_declaracion  goto 12
	error_control  goto 38
	error_asignacion  goto 39
	error_seleccion  goto 40
	error_invocacion  goto 41
	error_try_catch  goto 42
	declaracion_funcion  goto 13
	bloque_funcion  goto 59
	error_funcion  goto 14
	error_declaracion_funcion  goto 15
	bloque_ejecucion_funcion  goto 60
	error_bloque_funcion  goto 61
	error_bloque_ejecucion_funcion  goto 62


state 14
	funcion : error_funcion .  (108)

	.  reduce 108


state 15
	declaracion_funcion : error_declaracion_funcion .  (111)

	.  reduce 111


state 16
	asignacion : IDENTIFICADOR . ASIGNACION expresion2  (61)
	error_asignacion : IDENTIFICADOR . termino  (64)
	error_asignacion : IDENTIFICADOR . ASIGNACION error  (65)
	invocacion : IDENTIFICADOR . '(' CTE_ULONG ')'  (86)
	invocacion : IDENTIFICADOR . '(' CTE_DOUBLE ')'  (87)
	invocacion : IDENTIFICADOR . '(' IDENTIFICADOR ')'  (88)
	error_invocacion : IDENTIFICADOR . '(' ')'  (90)
	error_invocacion : IDENTIFICADOR . '(' CTE_ULONG error  (91)
	error_invocacion : IDENTIFICADOR . '(' CTE_DOUBLE error  (92)
	error_invocacion : IDENTIFICADOR . '(' IDENTIFICADOR error  (93)
	error_declaracion_funcion : IDENTIFICADOR . '(' parametro ')'  (112)

	IDENTIFICADOR  shift 63
	CTE_ULONG  shift 64
	ASIGNACION  shift 65
	CTE_DOUBLE  shift 66
	'('  shift 67
	'-'  shift 68
	.  error

	invocacion  goto 69
	termino  goto 70
	error_invocacion  goto 41
	factor  goto 71


state 17
	error_asignacion : ASIGNACION . termino  (63)

	IDENTIFICADOR  shift 63
	CTE_ULONG  shift 64
	CTE_DOUBLE  shift 66
	'-'  shift 68
	.  error

	invocacion  goto 69
	termino  goto 72
	error_invocacion  goto 41
	factor  goto 71


state 18
	seleccion : IF . '(' condicion ')' THEN bloque_if ENDIF  (66)
	seleccion : IF . '(' condicion ')' THEN bloque_if ELSE bloque_if ENDIF  (67)
	error_seleccion : IF . condicion ')' THEN bloque_if ENDIF  (76)
	error_seleccion : IF . '(' ')' THEN bloque_if ENDIF  (77)
	error_seleccion : IF . '(' condicion THEN bloque_if ENDIF  (78)
	error_seleccion : IF . '(' condicion ')' bloque_if ENDIF  (79)
	error_seleccion : IF . '(' condicion ')' THEN ENDIF  (80)
	error_seleccion : IF . '(' condicion ')' THEN bloque_if  (81)
	error_seleccion : IF . '(' condicion ')' THEN bloque_if ELSE ENDIF  (82)
	error_seleccion : IF . '(' condicion ')' THEN bloque_if ELSE bloque_if  (83)

	IDENTIFICADOR  shift 63
	CTE_ULONG  shift 64
	CTE_DOUBLE  shift 66
	'('  shift 73
	'-'  shift 68
	.  error

	invocacion  goto 69
	condicion  goto 74
	expresion2  goto 75
	termino  goto 76
	error_invocacion  goto 41
	expresion  goto 77
	expresion1  goto 78
	factor  goto 71


state 19
	impresion : PRINT . '(' CADENA ')'  (84)
	impresion : PRINT . '(' ')'  (85)

	'('  shift 79
	.  error


state 20
	bloque_ejecutable : BEGIN . bloque_sentencias END  (8)
	error_bloque_ejecutable : BEGIN . bloque_sentencias error  (13)

	IDENTIFICADOR  shift 80
	ASIGNACION  shift 17
	IF  shift 18
	PRINT  shift 19
	REPEAT  shift 21
	TRY  shift 22
	'('  shift 46
	.  error

	bloque_sentencias  goto 81
	sentencia_ejecucion  goto 28
	sentencia_ejecutable  goto 29
	control  goto 30
	seleccion  goto 31
	impresion  goto 32
	invocacion  goto 33
	asignacion  goto 34
	error_ejecucion  goto 35
	try_catch  goto 36
	error_sentencia_ejecucion  goto 37
	error_control  goto 38
	error_asignacion  goto 39
	error_seleccion  goto 40
	error_invocacion  goto 41
	error_try_catch  goto 42


state 21
	control : REPEAT . '(' asignacion_repeat ';' condicion ';' CTE_ULONG ')' bloque_repeat  (38)
	control : REPEAT . '(' asignacion_repeat ';' condicion ';' '-' CTE_ULONG ')' bloque_repeat  (39)
	error_control : REPEAT . asignacion_repeat ';' condicion ';' CTE_ULONG ')' bloque_repeat  (41)
	error_control : REPEAT . '(' ';' condicion ';' CTE_ULONG ')' bloque_repeat  (42)
	error_control : REPEAT . '(' asignacion_repeat condicion ';' CTE_ULONG ')' bloque_repeat  (43)
	error_control : REPEAT . '(' asignacion_repeat ';' ';' CTE_ULONG ')' bloque_repeat  (44)
	error_control : REPEAT . '(' asignacion_repeat ';' condicion CTE_ULONG ')' bloque_repeat  (45)
	error_control : REPEAT . '(' asignacion_repeat ';' condicion ';' ')' bloque_repeat  (46)
	error_control : REPEAT . '(' asignacion_repeat ';' condicion ';' CTE_ULONG bloque_repeat  (47)
	error_control : REPEAT . '(' asignacion_repeat ';' condicion ';' CTE_ULONG ')' error  (48)

	IDENTIFICADOR  shift 82
	ASIGNACION  shift 83
	'('  shift 84
	.  error

	asignacion_repeat  goto 85
	error_asignacion_repeat  goto 86


state 22
	try_catch : TRY . sentencia_ejecutable CATCH bloque_catch  (94)
	error_try_catch : TRY . CATCH bloque_catch  (96)
	error_try_catch : TRY . sentencia_ejecutable bloque_catch  (97)
	error_try_catch : TRY . sentencia_ejecutable CATCH error  (98)
	error_try_catch : TRY . try_catch CATCH bloque_catch  (99)

	IDENTIFICADOR  shift 80
	ASIGNACION  shift 17
	IF  shift 18
	PRINT  shift 19
	REPEAT  shift 21
	TRY  shift 22
	CATCH  shift 87
	'('  shift 46
	.  error

	sentencia_ejecutable  goto 88
	control  goto 30
	seleccion  goto 31
	impresion  goto 32
	invocacion  goto 33
	asignacion  goto 34
	error_ejecucion  goto 35
	try_catch  goto 89
	error_control  goto 38
	error_asignacion  goto 39
	error_seleccion  goto 40
	error_invocacion  goto 41
	error_try_catch  goto 42


state 23
	error_seleccion : '(' . condicion ')' THEN bloque_if ENDIF  (75)
	error_declaracion_funcion : IDENTIFICADOR '(' . parametro ')'  (112)

	IDENTIFICADOR  shift 63
	CTE_ULONG  shift 64
	CTE_DOUBLE  shift 66
	ULONG  shift 3
	DOUBLE  shift 4
	'-'  shift 68
	.  error

	invocacion  goto 69
	tipo  goto 90
	condicion  goto 91
	expresion2  goto 75
	termino  goto 76
	error_invocacion  goto 41
	parametro  goto 92
	error_parametro  goto 93
	expresion  goto 77
	expresion1  goto 78
	factor  goto 71


state 24
	programa : IDENTIFICADOR bloque_declarativo . bloque_ejecutable  (1)
	bloque_declarativo : bloque_declarativo . declaracion  (7)

	IDENTIFICADOR  shift 16
	ASIGNACION  shift 17
	IF  shift 18
	PRINT  shift 19
	FUNC  shift 2
	BEGIN  shift 20
	ULONG  shift 3
	DOUBLE  shift 4
	REPEAT  shift 21
	TRY  shift 22
	TYPEDEF  shift 5
	'('  shift 46
	.  error

	bloque_ejecutable  goto 94
	declaracion  goto 48
	bloque_sentencias  goto 26
	error_bloque_ejecutable  goto 27
	sentencia_ejecucion  goto 28
	sentencia_ejecutable  goto 29
	control  goto 30
	seleccion  goto 31
	impresion  goto 32
	invocacion  goto 33
	asignacion  goto 34
	error_ejecucion  goto 35
	try_catch  goto 36
	error_sentencia_ejecucion  goto 37
	tipo  goto 10
	funcion  goto 11
	error_declaracion  goto 12
	error_control  goto 38
	error_asignacion  goto 39
	error_seleccion  goto 40
	error_invocacion  goto 41
	error_try_catch  goto 42
	declaracion_funcion  goto 13
	error_funcion  goto 14
	error_declaracion_funcion  goto 15


state 25
	programa : IDENTIFICADOR bloque_ejecutable .  (2)
	error_programa : IDENTIFICADOR bloque_ejecutable . bloque_declarativo  (5)

	IDENTIFICADOR  shift 95
	FUNC  shift 2
	ULONG  shift 3
	DOUBLE  shift 4
	TYPEDEF  shift 5
	$end  reduce 2

	bloque_declarativo  goto 96
	declaracion  goto 9
	tipo  goto 10
	funcion  goto 11
	error_declaracion  goto 12
	declaracion_funcion  goto 13
	error_funcion  goto 14
	error_declaracion_funcion  goto 15


state 26
	bloque_sentencias : bloque_sentencias . sentencia_ejecucion  (11)
	error_bloque_ejecutable : bloque_sentencias . END  (12)

	IDENTIFICADOR  shift 80
	ASIGNACION  shift 17
	IF  shift 18
	PRINT  shift 19
	END  shift 97
	REPEAT  shift 21
	TRY  shift 22
	'('  shift 46
	.  error

	sentencia_ejecucion  goto 98
	sentencia_ejecutable  goto 29
	control  goto 30
	seleccion  goto 31
	impresion  goto 32
	invocacion  goto 33
	asignacion  goto 34
	error_ejecucion  goto 35
	try_catch  goto 36
	error_sentencia_ejecucion  goto 37
	error_control  goto 38
	error_asignacion  goto 39
	error_seleccion  goto 40
	error_invocacion  goto 41
	error_try_catch  goto 42


state 27
	bloque_ejecutable : error_bloque_ejecutable .  (9)

	.  reduce 9


state 28
	bloque_sentencias : sentencia_ejecucion .  (10)

	.  reduce 10


state 29
	sentencia_ejecucion : sentencia_ejecutable .  (25)

	.  reduce 25


state 30
	sentencia_ejecutable : control . ';'  (14)
	error_ejecucion : control . error  (20)

	error  shift 99
	';'  shift 100
	.  error


state 31
	sentencia_ejecutable : seleccion . ';'  (15)
	error_ejecucion : seleccion . error  (21)

	error  shift 101
	';'  shift 102
	.  error


state 32
	sentencia_ejecutable : impresion . ';'  (16)
	error_ejecucion : impresion . error  (22)

	error  shift 103
	';'  shift 104
	.  error


state 33
	sentencia_ejecutable : invocacion . ';'  (17)
	error_ejecucion : invocacion . error  (24)

	error  shift 105
	';'  shift 106
	.  error


state 34
	sentencia_ejecutable : asignacion . ';'  (18)
	error_ejecucion : asignacion . error  (23)

	error  shift 107
	';'  shift 108
	.  error


state 35
	sentencia_ejecutable : error_ejecucion .  (19)

	.  reduce 19


state 36
	sentencia_ejecucion : try_catch . ';'  (26)
	error_sentencia_ejecucion : try_catch . error  (28)

	error  shift 109
	';'  shift 110
	.  error


state 37
	sentencia_ejecucion : error_sentencia_ejecucion .  (27)

	.  reduce 27


state 38
	control : error_control .  (40)

	.  reduce 40


state 39
	asignacion : error_asignacion .  (62)

	.  reduce 62


state 40
	seleccion : error_seleccion .  (68)

	.  reduce 68


state 41
	invocacion : error_invocacion .  (89)

	.  reduce 89


state 42
	try_catch : error_try_catch .  (95)

	.  reduce 95


state 43
	declaracion_funcion : FUNC IDENTIFICADOR . '(' parametro ')'  (110)
	error_declaracion_funcion : FUNC IDENTIFICADOR . parametro ')'  (114)
	error_declaracion_funcion : FUNC IDENTIFICADOR . '(' ')'  (115)
	error_declaracion_funcion : FUNC IDENTIFICADOR . '(' parametro error  (116)

	ULONG  shift 3
	DOUBLE  shift 4
	'('  shift 111
	.  error

	tipo  goto 90
	parametro  goto 112
	error_parametro  goto 93


state 44
	error_declaracion_funcion : FUNC '(' . parametro ')'  (113)

	ULONG  shift 3
	DOUBLE  shift 4
	.  error

	tipo  goto 90
	parametro  goto 113
	error_parametro  goto 93


state 45
	declaracion : TYPEDEF IDENTIFICADOR . '=' tipo funcion_type ';'  (31)

	'='  shift 114
	.  error


state 46
	error_seleccion : '(' . condicion ')' THEN bloque_if ENDIF  (75)

	IDENTIFICADOR  shift 63
	CTE_ULONG  shift 64
	CTE_DOUBLE  shift 66
	'-'  shift 68
	.  error

	invocacion  goto 69
	condicion  goto 91
	expresion2  goto 75
	termino  goto 76
	error_invocacion  goto 41
	expresion  goto 77
	expresion1  goto 78
	factor  goto 71


state 47
	error_programa : bloque_declarativo bloque_ejecutable .  (4)

	.  reduce 4


state 48
	bloque_declarativo : bloque_declarativo declaracion .  (7)

	.  reduce 7


state 49
	lista_de_variables : IDENTIFICADOR .  (104)
	error_declaracion_funcion : IDENTIFICADOR . '(' parametro ')'  (112)

	'('  shift 115
	error  reduce 104
	IDENTIFICADOR  reduce 104
	';'  reduce 104
	','  reduce 104


state 50
	declaracion : tipo lista_de_variables . ';'  (29)
	error_declaracion : tipo lista_de_variables . error  (33)
	lista_de_variables : lista_de_variables . ',' IDENTIFICADOR  (103)
	error_lista_de_variables : lista_de_variables . IDENTIFICADOR  (106)

	error  shift 116
	IDENTIFICADOR  shift 117
	';'  shift 118
	','  shift 119
	.  error


state 51
	declaracion : tipo funcion . ';'  (30)
	error_declaracion : tipo funcion . error  (34)

	error  shift 120
	';'  shift 121
	.  error


state 52
	lista_de_variables : error_lista_de_variables .  (105)

	.  reduce 105


state 53
	error_declaracion : funcion ';' .  (35)

	.  reduce 35


state 54
	error_funcion : declaracion_funcion error .  (109)

	.  reduce 109

